move geodata stuff to swagger documented area
