# src/main/java/de/darfichraus/controller/GeoDataController.java
@@ -1,12 +1,14 @@
 package de.darfichraus.controller;
 
-import de.darfichraus.dto.NearGeoData;
-import de.darfichraus.entity.GeoData;
+import de.darfichraus.model.GeoNearRequest;
+import de.darfichraus.model.GeoData;
+import de.darfichraus.model.Location;
 import de.darfichraus.service.GeoDataService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import javax.validation.Valid;
 import java.util.List;
 
 @RestController
@@ -18,24 +20,29 @@ public class GeoDataController implements de.darfichraus.api.GeodataApi {
         this.geoDataService = geoDataService;
     }
 
-    @GetMapping("/geodata/states")
-    public ResponseEntity<List<GeoData>> getStates() {
-        return ResponseEntity.ok(geoDataService.getAllStates());
-    }
-
-    @GetMapping("/geodata/admin/{state}")
-    public ResponseEntity<List<GeoData>> getAdminAreasForState(@PathVariable("state") final String state) {
+    @Override
+    public ResponseEntity<List<GeoData>> findAllAdminAreas(String state) {
         return ResponseEntity.ok(geoDataService.getAdminAreasForState(state));
     }
 
-    @GetMapping("/geodata/regional/{admin}")
-    public ResponseEntity<List<GeoData>> getRegionalAreasForAdminArea(@PathVariable("admin") final String admin) {
-        return ResponseEntity.ok(geoDataService.getRegionalAreasForAdminArea(admin));
+    @Override
+    public ResponseEntity<List<GeoData>> findAllNearGeoData(@Valid GeoNearRequest geoNearRequest) {
+        return ResponseEntity.ok(geoDataService.getGeoDataNearLocation(geoNearRequest));
     }
 
-    @PostMapping("/geodata/near")
-    public ResponseEntity<List<GeoData>> getGeoDataNearLocation(@RequestBody final NearGeoData nearGeoData) {
-        return ResponseEntity.ok(geoDataService.getGeoDataNearLocation(nearGeoData));
+    @Override
+    public ResponseEntity<List<GeoData>> findAllRegionalAreasInAdminArea(String adminArea) {
+        return ResponseEntity.ok(geoDataService.getRegionalAreasForAdminArea(adminArea));
+    }
+
+    @Override
+    public ResponseEntity<List<GeoData>> findAllStates() {
+        return ResponseEntity.ok(geoDataService.getAllStates());
+    }
+
+    @Override
+    public ResponseEntity<GeoData> findLocationById(String id) {
+        return  ResponseEntity.ok(geoDataService.getGeoDataById(id));
     }
 
     @Override
